# vsimple

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: deploy.yml  test_on_push.yaml
cfg/: README.md  cfg.cmake  codestyle.cfg  sanalyzer.cfg  vlib.cfg
doc/: CODE_OF_CONDUCT.md  Doxyfile  FAQ.md  HISTORY.md  INSTALL.md  LICENSE.md  README.md
include/cmake/: all.cmake  pthread.cmake  vchrono.cmake  vcmdline_parser.cmake  vcompiler_traits.cmake  vlog.cmake  vposix.cmake  vprofile.cmake  vserial_port.cmake  vtimer.cmake
include/gtests/: CMakeLists.txt  list_of_tests.sh  qmake_tests.pro
include/gtests/test_FISH/: CMakeLists.txt  test_template.pro
include/qmake/: gtest.pri
include/vbyte_buffer/: vbyte_buffer.cmake  vbyte_buffer.cpp  vbyte_buffer.h  vbyte_buffer_view.cpp  vbyte_buffer_view.h
include/vbyte_buffer/test_vbyte_buffer/: CMakeLists.txt  main.cpp
include/vcan_socket/: vcan_socket.cmake  vcan_socket.h  vcan_socket.pri
include/vcat/: vcat.cmake  vcat.cpp  vcat.h  vcat.pri
include/vcat/impl_vcat/: containers.h  tuple.h  vcat_iface.h  vcat_qt_deploy.cpp  vcat_qt_deploy.h
include/vchrono/: vchrono.pri  vtime_meter.h
include/vchrono/impl_vchrono/: time_meter.h
include/vcmdline_parser/: vcmdline_parser.pri
include/vcompiler_traits/: vcompiler_traits.h  vcompiler_traits.pri
include/vgit/: vgit.cmake  vgit.cpp  vgit.pri
include/vlog/: readme.md  vlog.h  vlog.pri
include/vnetwork/: vnetwork.cmake  vnetwork.pri
include/vposix/: vposix.pri
include/vposix/impl_vposix/: wrap_signal.h  wrap_sys_socket.cpp
include/vprofile/: vprofile.pri
include/vserial_port/: vserial_port.pri
include/vsettings/: vsettings.cmake  vsettings.pri
include/vsignal/: vsignal.cmake  vsignal.h  vsignal.pri
include/vtimer/: vtimer.cmake  vtimer.pri
libs/: README.md
scripts/: README.md  build-gui.sh  build.sh  class.sh  codestyle.sh  configure  coverage.sh  danalyze.sh  doc.sh  install-third-party.sh  install.sh  refresh.sh  rename.sh  run.sh  sanalyze.sh  test.sh  update_submodules.sh
src/: README.md  main.cpp  src.cmake
src/cmake/: c++11.cmake  gtest.cmake
src/config/: README.md  config.cmake  config.cpp  config.h
src/core/: README.md  core.cmake  core.cpp  core.h
src/defs/: defs.cmake  defs.h
src/gtests/: CMakeLists.txt  qmake_tests.pro
src/gtests/test_FISH/: main.cpp
src/pack/: README.md  pack.cmake  pack.cpp  pack.h
src/plot/: README.md  plot.cmake  view.cpp  view.h
src/publish/: README.md  publish.cmake  publish.cpp  publish.h
src/qmake/: v_has_qt.pri
src/subscribe/: README.md  subscribe.cmake  subscribe.cpp  subscribe.h
src/vbyte_buffer/: vbyte_buffer.cmake  vbyte_buffer.pri
src/vcan_socket/: README  vcan_socket.cpp  vcan_socket.pri
src/vcan_socket/test_vcan_socket/: main.cpp  test_vcan_socket.pro
src/vcat/: vcat.pri
src/vchrono/: vchrono.cmake
src/vcmdline_parser/: vcmdline_parser.cmake  vcmdline_parser.pri
src/vcompiler_traits/: vcompiler_traits.cmake  vcompiler_traits.h
src/vgit/: vgit_post.cmake
src/vlog/: vlog.cmake  vlog.pri
src/vnetwork/: vnetwork.pri
src/vposix/: vposix.cmake  vposix.pri
src/vposix/impl_vposix/: wrap_errno.h  wrap_signal.cpp  wrap_sys_ioctl.cpp  wrap_sys_ioctl.h  wrap_sys_socket.h
src/vprofile/: vprofile.cmake  vprofile.pri
src/vserial_port/: vserial_port.cmake
src/vsettings/: vsettings.pri
tests/: CMakeLists.txt  README.md
tests/src_test/: README.md  src_test.cmake  test.cpp
tests/src_test/config_test/: README.md  config_test.cmake  config_test.cpp  config_test.h
tests/src_test/core_test/: README.md  core_test.cmake  core_test.cpp  core_test.h
tests/src_test/pack_test/: README.md  pack_test.cmake  pack_test.cpp  pack_test.h
tests/src_test/publish_test/: README.md  publish_test.cmake  publish_test.cpp  publish_test.h
tests/src_test/subscribe_test/: README.md  subscribe_test.cmake  subscribe_test.cpp  subscribe_test.h
tests/src_test/vbyte_buffer_test/: CMakeLists.txt  README.md  test_vbyte_buffer.pro  vbyte_buffer_test.cmake  vbyte_buffer_test.cpp  vbyte_buffer_test.h
tests/src_test/vcan_socket_test/: CMakeLists.txt  test_vcan_socket.pro  vcan_socket_test.cmake  vcan_socket_test.cpp  vcan_socket_test.h
tests/src_test/vcat_test/: CMakeLists.txt  test_vcat.pro  vcat_test.cmake  vcat_test.cpp  vcat_test.h
tests/src_test/vchrono_test/: CMakeLists.txt  test_vchrono.pro  vchrono_test.cmake  vchrono_test.cpp  vchrono_test.h
tests/src_test/vcmdline_parser_test/: CMakeLists.txt  test_vcmdline_parser.pro  vcmdline_parser_test.cmake  vcmdline_parser_test.cpp  vcmdline_parser_test.h
tests/src_test/vcompiler_traits_test/: CMakeLists.txt  test_vcompiler_traits.pro  vcompiler_traits_test.cmake  vcompiler_traits_test.cpp  vcompiler_traits_test.h
tests/src_test/vgit_test/: vgit_test.cmake  vgit_test.cpp  vgit_test.h
tests/src_test/vlog_test/: CMakeLists.txt  test_vlog.pro  vlog_test.cmake  vlog_test.cpp  vlog_test.h
tests/src_test/vnetwork_test/: CMakeLists.txt  test_vnetwork.pro  vnetwork_test.cmake  vnetwork_test.cpp  vnetwork_test.h
tests/src_test/vposix_test/: CMakeLists.txt  test_vposix.pro  vposix_test.cmake  vposix_test.cpp  vposix_test.h
tests/src_test/vprofile_test/: CMakeLists.txt  test_vprofile.pro  vprofile_test.cmake  vprofile_test.cpp  vprofile_test.h
tests/src_test/vserial_port_test/: CMakeLists.txt  test_vserial_port.pro  vserial_port_test.cmake  vserial_port_test.cpp  vserial_port_test.h
tests/src_test/vsettings_test/: CMakeLists.txt  test_vsettings.pro  vsettings_test.cmake  vsettings_test.cpp  vsettings_test.h
tests/src_test/vsignal_test/: CMakeLists.txt  test_vsignal.pro  vsignal_test.cmake  vsignal_test.cpp  vsignal_test.h
tests/src_test/vtimer_test/: CMakeLists.txt  test_vtimer.pro  vtimer_test.cmake  vtimer_test.cpp  vtimer_test.h
