#========================================================================================

cmake_minimum_required( VERSION 3.10 )

#========================================================================================

project( vsimple )

#========================================================================================

set( CMAKE_BUILD_TYPE "Release" )

#========================================================================================

set( CMAKE_CXX_STANDARD 11 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )

#========================================================================================

include_directories( ${CMAKE_SOURCE_DIR} )

set( VSIMPLE_DIR ${CMAKE_CURRENT_LIST_DIR}/include )

#========================================================================================

include( ${VSIMPLE_DIR}/cmake/all.cmake )

#========================================================================================

add_library( ${PROJECT_NAME} SHARED ${V_HEADERS} ${V_SOURCES} )

target_link_libraries( ${PROJECT_NAME} ${V_LIBRARIES} )

#========================================================================================

unset ( QT_QMAKE_EXECUTABLE )

#========================================================================================
